# legacy-clonk-ls

./: .gitmodules  README.md  prerelease.sh  release-build.sh
client/: .vscodeignore  README.md  c4ini-language-configuration.json  c4script-language-configuration.json  package-lock.json  package.json
client/client/: package-lock.json  package.json
client/client/src/: c4group.ts  config.ts  extension.ts  runner.ts
doc-prepare/: Cargo.toml
doc-prepare/src/: main.rs
server/: Cargo.toml  out
server/src/: analyze.rs  highlighting.rs  lib.rs  main.rs
server/src/core/: c4d_categories.json  embedding.rs  kind.rs  mod.rs  parse.rs  project.rs  signatures.rs
server/src/lang/: de-DE.json  en-EN.json  mod.rs
server/src/lsp/: analyze.rs  asset_handler.rs  doc.rs  highlight_helper.rs  highlighting.rs  markdown.rs  mod.rs  script_handler.rs  token_types.rs
server/src/lsp/scenario_txt_handler/: definition.rs  highlighting.rs  mod.rs  node_kind.rs  scenario_txt_defs.csv
server/src/lsp/script_handler/: highlighting.rs  mod.rs
tree-sitter-c4ini/: .gitignore  Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-c4ini/bindings/node/: binding.cc  index.js
tree-sitter-c4ini/bindings/rust/: lib.rs
tree-sitter-c4ini/src/: grammar.json  node-types.json  parser.c
tree-sitter-c4ini/test/corpus/: Scenario_01.txt
tree-sitter-c4script/: Cargo.toml  Test.c  binding.gyp  grammar.js  package-lock.json  package.json  test-original.js
tree-sitter-c4script/src/: grammar.json  node-types.json  parser.c
tree-sitter-c4script/test/corpus/: if.txt  (+10 more)
(+31 files in other folders)
